--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/l_blue"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
@@ -49,7 +48,7 @@
                         app:iss_auto_cycle="true"
                         app:iss_period="2500"
                         app:iss_delay="0"
-                        android:background="@color/l_blue"/>
+                      />
 
                 </androidx.cardview.widget.CardView>
 
@@ -62,7 +61,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="10dp"
                     android:text="Lokasi Gunung"
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -79,17 +78,31 @@
 
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/fabPeralatan"
+            android:id="@+id/fabBantuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="20dp"
-            android:text="Peralatan"
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="580dp"
+            android:text="Bantuan"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             android:textStyle="bold"
             android:theme="@style/FabExtendedMaterialTheme"
-            app:icon="@drawable/ic_peralatan"
+            app:icon="@drawable/ic_bantuan"
+            app:iconTint="@android:color/white" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/fabTips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="520dp"
+            android:text="Tips"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:theme="@style/FabExtendedMaterialTheme"
+            app:icon="@drawable/ic_tips"
             app:iconTint="@android:color/white" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
