--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="FabExtendedMaterialTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:backgroundTint">@color/colorPrimary</item>
+        <item name="android:backgroundTint">@color/btn</item>
         <item name="textAppearanceButton">@style/AppTextAppearance.Button</item>
     </style>
 
