--- a/app/src/main/res/drawable/tab_background_selected.xml
+++ b/app/src/main/res/drawable/tab_background_selected.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary" />
-    <solid android:color="@color/colorPrimary" />
+        android:color="@color/btn" />
+    <solid android:color="@color/btn" />
 </shape>
