--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="@color/l_blue">
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,14 +21,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hello"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hikers !"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
@@ -41,7 +41,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="5dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_profile" />
+            android:src="@drawable/logo_hikinghelper" />
 
     </RelativeLayout>
 
