--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBackground">#f7f8f3</color>
     <color name="l_blue">#83CEF4</color>
     <color name="teal"> #00796B</color>
+    <color name="btn"> #000000</color>
 </resources>
