--- a/app/src/main/res/layout/activity_tips.xml
+++ b/app/src/main/res/layout/activity_tips.xml
@@ -29,7 +29,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:text="Peralatan Gunung"
+                    android:text="Tips"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold" />
