--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -34,14 +34,16 @@
 
         </LinearLayout>
 
-        <ImageView
+        <Button
+            android:id="@+id/btnsuara"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="5dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/logo_hikinghelper" />
+            android:background="@drawable/logo_hikinghelper"
+            android:scaleType="fitXY" />
+
 
     </RelativeLayout>
 
